Actualización completa del proyecto MAPLE

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,5 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "description": "Meaningful Assistance for People Living Everywhere - Un asistente inteligente que combina APIs gubernamentales con RAG para proporcionar información precisa y contextualizada"
+  "description": "Chatbot gubernamental con RAG para proporcionar información precisa y contextualizada"
 }
